# ContextFSM

./: .gitignore  CMakeLists.txt  LICENSE  library.json
examples/events/: CMakeLists.txt
examples/events/src/: main.cpp
src/ContextFSM/: StateMachine.hpp
